--- a/src/pages/Repositorios/style.css
+++ b/src/pages/Repositorios/style.css
@@ -1,7 +1,10 @@
 .CardArea {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+a {
+    text-decoration: none;
 }
