--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,52 +1,53 @@
 .Card {
-    margin: auto;
-    border: #2874A6 4px solid;
-    background-color: #BFC9CA;
-    width: 25rem;
-    margin-top: 2.5rem;
-    height: 7rem;
-    border-radius: 10px;
-    display: flex;
+  margin: auto;
+  border: #ff0000 4px solid;
+  background-color: #bfc9ca;
+  width: 25rem;
+  margin-top: 2.5rem;
+  height: 7rem;
+  border-radius: 10px;
+  display: flex;
+  color: #ffffff;
 }
 
 .Card:hover {
-    filter: brightness(0.9);
-    cursor: pointer;
-    border-color: #2ECC71;
+  filter: brightness(0.9);
+  cursor: pointer;
+  border-color: #d32e2e;
 }
 
 .Imagem {
-    width: 50%;
-    height: auto;
+  width: 50%;
+  height: auto;
 }
 
 .Imagem img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-top: 0.4rem;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 0.4rem;
 }
 
 .Info {
-    justify-content: center;
-    width: 50%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .Info strong {
-    color: #222;
-    font-size: 1.4rem;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+  color: #222;
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 
 .Info p {
-    color: #2874A6;
-    font-size: 1.3rem;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    padding: 0;
-    margin: 0;
+  color: #222;
+  font-size: 1.3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  padding: 0;
+  margin: 0;
 }
