--- a/src/components/CardRepos/style.css
+++ b/src/components/CardRepos/style.css
@@ -3,7 +3,7 @@
     margin-top: 2.5rem;
     width: 30rem;
     height: auto;
-    border: 5px solid #3889BD;
+    border: 5px solid #FF0000;
     background-color: #fff;
     display: flex;
     justify-content: center;
@@ -15,7 +15,7 @@
 .CardRepo:hover {
     filter: brightness(0.9);
     cursor: pointer;
-    border-color: #2ECC71;
+    border-color: #d32e2e;
 }
 
 .CardRepo p {
